# sqruff

./: .sqruff.toml  Cargo.toml  LICENSE  README.md
benchmarks/: README.md  compare_sqlfluff.py  (+1 more)
sqruff-cli/: Cargo.toml
sqruff-cli/src/: main.rs
sqruff-core/: Cargo.toml
sqruff-core/benches/: format_bench.rs  lexer_bench.rs  lint_bench.rs  parser_bench.rs
sqruff-core/src/: config.rs  lib.rs
sqruff-core/src/formatter/: mod.rs
sqruff-core/src/rules/: keyword_casing.rs  missing_where.rs  mod.rs  select_star.rs  trailing_comma.rs  unused_alias.rs
sqruff-core/tests/: parser_test.rs  rules_test.rs
sqruff-core/tests/fixtures/parser/: aggregate_group_by.sql  arithmetic_expressions.sql  comments_inline.sql  complex_where.sql  create_table_constraints.sql  create_table_full.sql  cross_join.sql  delete_with_conditions.sql  escaped_strings.sql  insert_multiple_rows.sql  multiple_statements.sql  nested_function_calls.sql  quoted_identifiers.sql  right_full_join.sql  select_distinct.sql  select_is_null.sql  select_with_joins.sql  select_with_limit_offset.sql  string_with_keywords.sql  update_with_expressions.sql
sqruff-core/tests/fixtures/rules/sq001/: fail_select_star_join.sql  pass_aggregate_functions.sql  pass_count_star.sql  pass_explicit_columns.sql  pass_expressions.sql  pass_qualified_columns.sql
sqruff-core/tests/fixtures/rules/sq002/: fail_delete_all_rows.sql  fail_delete_no_where.sql  fail_update_no_where.sql  fail_update_set_multiple.sql  pass_delete_with_in.sql  pass_delete_with_where.sql  pass_update_complex_where.sql  pass_update_with_where.sql
(+35 files in other folders)
